# fullstack-interview-public

./: .gitignore  README.md  answers.txt  docker-compose-debug-api.yml  docker-compose.yml  team_hierarchy_fix.txt
api/: Dockerfile  database.db  pyproject.toml
api/src/: database.py  dependencies.py  main.py
api/src/models/: employee.py  team.py
api/src/routers/: employees.py  teams.py
web/: Dockerfile  next.config.js  package-lock.json  package.json
web/src/components/: EmployeeAdd.tsx  TeamAdd.tsx
web/src/components/employees/: EmployeeAdd.tsx
web/src/components/forms/: FormError.tsx  FormFieldError.tsx  FormSuccess.tsx
web/src/components/layout/: Layout.tsx  SideBar.tsx  TopBar.tsx
web/src/components/teams/: TeamAdd.tsx
web/src/pages/: _app.tsx  index.tsx  teams.tsx
web/src/theme/: theme.ts
web/src/types/: index.ts
